JumpScript/tests/baselines/reference/invalidTypeOfTarget.errors.txt
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(1,16): error TS1003: Identifier expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(2,16): error TS1003: Identifier expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(2,24): error TS1005: '=>' expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(3,16): error TS1003: Identifier expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(4,16): error TS1003: Identifier expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(5,16): error TS1003: Identifier expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(6,16): error TS2304: Cannot find name 'null'.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(7,16): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(7,25): error TS1005: ',' expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(7,26): error TS1005: ',' expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(7,29): error TS1005: '=>' expected.
tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump(8,16): error TS1003: Identifier expected.


==== tests/cases/conformance/types/specifyingTypes/typeQueries/invalidTypeOfTarget.jump (12 errors) ====
    var x1: typeof {};
                   ~
!!! error TS1003: Identifier expected.
    var x2: typeof (): void;
                   ~
!!! error TS1003: Identifier expected.
                           ~
!!! error TS1005: '=>' expected.
    var x3: typeof 1;
                   ~
!!! error TS1003: Identifier expected.
    var x4: typeof '';
                   ~~
!!! error TS1003: Identifier expected.
    var x5: typeof [];
                   ~
!!! error TS1003: Identifier expected.
    var x6: typeof null;
                   ~~~~
!!! error TS2304: Cannot find name 'null'.
    var x7: typeof function f() { };
                   ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
                            ~
!!! error TS1005: ',' expected.
                             ~
!!! error TS1005: ',' expected.
                                ~
!!! error TS1005: '=>' expected.
    var x8: typeof /123/;
                   ~
!!! error TS1003: Identifier expected.